--- a/task-2/index.css
+++ b/task-2/index.css
@@ -10,6 +10,7 @@ p{
 
 ul {
     list-style-type: none;
+    margin-left: 1rem;
 }
 
 li {
@@ -28,13 +29,14 @@ li {
     height: 1rem;
     color: white;
     border: 1px solid black;
-    border-radius: 50%;
+    border-radius: 50% !important;
     background-color: #3088a3;
     font-size: 0.5rem
 }
 
 .red-circles{
     background-color: rgba(255, 100, 100, 0.9);
+    color: black;
 }
 
 .popup-icon{
@@ -45,7 +47,6 @@ li {
     display: flex;
     justify-content: center;
     text-align: center;
-    margin: 0;
 }
 
 .number{
@@ -54,9 +55,10 @@ li {
     padding-left: 1rem;
 }
 
-.radio-container{
+.formContainer{
     position: relative;
-    z-index: 20;
-    margin: 0.5rem;
-    width: 10%;
+    z-index: 1;
+    margin: 1rem;
+    width: 9.13%;
+    padding: 0;
 }
